Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22640

Invalid memory read on QmlProfiler shutdown

XMLWordPrintable

    • 96a3c80609b976a673585d0745c30a527e3bd913 (qt-creator/qt-creator/master) 5daae2cf6cf4c2fc1569ed3c5c2f25294ac1a57d (qt-creator/qt-creator/4.10)

      When a profiling session is terminated with the square red button in the QML profiler UI, the debug clients can be deleted interleaved with the destruction of the debug connection, leading to invalid memory reads.

        For Gerrit Dashboard: QTCREATORBUG-22640
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            ulherman Ulf Hermann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes