QmlProfiler: deleteLater() the debug message and engine control clients

Nesting the dtors of the different clients is dangerous as the
connection might call back into a virtual function of a half-destructed
object this way.

Fixes: QTCREATORBUG-22640
Change-Id: I91fccc41fbea40a7f78ef344759abe26d140434d
Reviewed-by: Christian Stenger <christian.stenger@qt.io>